--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <link rel="stylesheet" type="text/css" href="style.css">
-<link rel= "icon" href="https://www.nytimes.com/vi-assets/static-assets/ios-default-homescreen-57x57-7cccbfb151c7db793e92ea58c30b9e72.png" type= "image/x-icon">
+<link rel= "icon" href="nyt-logo.png" type= "image/x-icon">
   <head>
     <meta charset="utf-8">
     <title>Space Ripples Reveal Big Bang’s Smoking Gun - The New York Times</title>
