--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <link rel="stylesheet" type="text/css" href="style.css">
-<link rel= "icon" href="/nyt-logo.ico" type= "image/x-icon">
+<link rel= "icon" href="nyt-logo.ico" type= "image/x-icon">
   <head>
     <meta charset="utf-8">
     <title>Space Ripples Reveal Big Bang’s Smoking Gun - The New York Times</title>
